# cvwonder-studio

./: .dockerignore  .env.example  .env.local  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.serve  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: mkdocs.yml  pyproject.toml  requirements.txt
docs/dockerhub/: README.md
docs/github-pages/: docusaurus.config.ts  package.json  pnpm-lock.yaml
docs/github-pages/docs/contributing/: index.md
docs/github-pages/docs/developer-guide/: configuration.md  index.md  installation.md  quickstart.md
docs/github-pages/docs/license/: index.mdx
docs/github-pages/docs/user-guide/: export-options.md  gallery.md  index.md  yaml-format.md
docs/github-pages/src/css/: custom.css
docs/github-pages/src/pages/: index.module.css  index.tsx
docs/github-pages/src/theme/: MDXComponents.js
docs/github-pages/static/: cv.yml
docs/github-pages/static/img/: README.md
docs/readthedocs/: index.md  license.md
docs/readthedocs/contributing/: architecture.md  code-of-conduct.md  development.md  issues.md  pull-requests.md  team.md
docs/readthedocs/contributing/maintainer/: git-workflow.md  release-flow.md
docs/readthedocs/gallery/: overview.md
docs/readthedocs/getting-started/: configuration.md  download-pdf.md  installation.md  quick-start.md  write-cv.md
docs/readthedocs/stylesheets/: extra.css
docs/readthedocs/user-guide/: export-options.md  gallery.md  yaml-format.md
(+398 files in other folders)
